force-app/main/default/objects/Account/fields/bbjhh__c.field-meta.xml
<CustomField>
    <fullName>bbjhh__c</fullName>
    <label>bbjhh</label>
    <type>Date</type>
</CustomField>