force-app/main/default/objects/Account/fields/rees__c.field-meta.xml
<CustomField>
    <fullName>rees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>rees</label>
    <type>Checkbox</type>
</CustomField>