force-app/main/default/objects/Account/fields/sete__c.field-meta.xml
<CustomField>
    <fullName>sete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sete</label>
    <type>Checkbox</type>
</CustomField>